--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,9 +5,9 @@ spring.main.web-application-type=none
 selenium.browser=chrome
 
 # true/false
-selenium.browser.headless=true
+selenium.browser.headless=false
 
 # grid/normal
 selenium.browser.remote=normal
 
-target.application.baseUrl=https://duckduckgo.com/
+target.application.baseUrl=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
