--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 
         <maven.compiler.version>3.11.0</maven.compiler.version>
         <springboot.version>3.1.2</springboot.version>
-        <webdriver.version>5.4.1</webdriver.version>
+        <webdriver.version>5.8.0</webdriver.version>
         <cucumber.version>7.13.0</cucumber.version>
-        <selenium.version>4.11.0</selenium.version>
+        <selenium.version>4.19.1</selenium.version>
 
     </properties>
 
@@ -32,6 +32,21 @@
                     <source>18</source>
                     <target>18</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit4</artifactId>
+                        <version>2.22.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
@@ -89,6 +104,5 @@
             <version>${webdriver.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
